<resources>
    <string name="app_name">Art f1.4</string>

    <string name="hint_email">Correo</string>
    <string name="hint_password">Contraseña</string>
    <string name="hint_name">Full Name</string>
    <string name="btn_login">ENTRAR</string>
    <string name="btn_register">REGISTRAR</string>
    <string name="btn_link_to_register">Crear nueva cuenta.</string>
    <string name="btn_link_to_login">Already registred! Login Me.</string>
    <string name="welcome">Bienvenido</string>
    <string name="btn_logout">SALIR</string>
    <string name="name">Fullname</string>
    <string name="title_activity_mnet">MnetActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- tablas de bases de datos -->
    <string name="db_name_users">users</string>
    <string name="db_name_shared">shared</string>
    <string name="db_name_img_storage">IMG_POSTS</string>
    <string name="db_name_users_posts">users_posts</string>
    <string name="db_name_followers">followers</string>
    <string name="db_name_friends">friends</string>
</resources>
